fixed navbar layout issues

--- a/src/scss/sections/_navbar.scss
+++ b/src/scss/sections/_navbar.scss
@@ -2,6 +2,9 @@
 
 ._navbar {
   //  @include gradient($primary, $secondary);
+  box-shadow: 0px 19px 23px 0px rgba(0, 0, 0, 0.25);
+  padding-inline: clamp(0.5rem, 8vw, 15rem);
+  // padding-inline: 20rem;
   .main-list {
     li {
       padding-left: 10px;
