--- a/src/scss/styles/styles.css
+++ b/src/scss/styles/styles.css
@@ -55557,6 +55557,10 @@ a > .light code {
   }
 }
 
+._navbar {
+  box-shadow: 0px 19px 23px 0px rgba(0, 0, 0, 0.25);
+  padding-inline: clamp(0.5rem, 8vw, 15rem);
+}
 ._navbar .main-list li {
   padding-left: 10px;
 }
